[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Font/pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Game2.gd" type="Script" id=2]
[ext_resource path="res://scripts/startGame2.gd" type="Script" id=3]
[ext_resource path="res://assets/Font/flappyfont.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Font/Gamer.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 128
outline_size = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 124
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 2
font_data = ExtResource( 1 )

[node name="Game2" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 310.0
margin_top = 50.0
margin_right = 424.0
margin_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bonus" type="Label" parent="Score"]
anchor_left = 0.456
anchor_top = -0.019
anchor_right = 0.456
anchor_bottom = -0.019
margin_left = -19.984
margin_top = -18.081
margin_right = 20.016
margin_bottom = 7.919
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "1x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
visible = false
margin_left = 340.0
margin_top = 130.0
margin_right = 388.0
margin_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
pause_mode = 2
margin_right = 728.0
margin_bottom = 1088.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starttext" type="Node2D" parent="Button"]
pause_mode = 2
position = Vector2( 5, 100 )

[node name="tap" type="Label" parent="Button/starttext"]
margin_left = 255.355
margin_top = 393.302
margin_right = 451.355
margin_bottom = 523.302
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.94902, 1, 0.996078, 1 )
text = "tap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="to" type="Label" parent="Button/starttext"]
margin_left = 310.0
margin_top = 480.0
margin_right = 379.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "to
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Label" parent="Button/starttext"]
margin_left = 290.0
margin_top = 515.0
margin_right = 330.0
margin_bottom = 546.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "play
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="setCorButton" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="delayset" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="losechangechosen" from="." to="." method="_on_Game2_losechangechosen"]
[connection signal="winchangechosen" from="." to="." method="_on_Game2_winchangechosen"]
[connection signal="button_down" from="Button" to="Button" method="_on_Button_button_down"]
[connection signal="timeout" from="spawn" to="." method="_on_spawn_timeout"]
[connection signal="timeout" from="setCorButton" to="." method="_on_setCorButton_timeout"]
[connection signal="timeout" from="delayset" to="." method="_on_delayset_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
